button and overlap fix in recommendations

--- a/src/App.css
+++ b/src/App.css
@@ -222,7 +222,6 @@ img {
     padding-top: 0%;
     display: flex;
     flex-direction: column;
-    height: 700px;
   }
   
   .proceed-container{
