--- a/src/css/GenericButton.css
+++ b/src/css/GenericButton.css
@@ -35,6 +35,7 @@
     .borderRadiusBottom{
         /* border-radius: 0px 0px 20px 20px; */
         border-radius: 6px;
+        height: 34px;
     }
 } 
 
